# smartcore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  lint.yml
benches/: distance.rs  fastpair.rs  naive_bayes.rs  random_forest.rs
src/: api.rs  base.rs  error.rs  lib.rs  num.rs  rand.rs  rand_custom.rs  utils.rs
src/algorithm/: mod.rs
src/algorithm/neighbour/: bbd_tree.rs  cover_tree.rs  dissimilarities.rs  distances.rs  fastpair.rs  linear_search.rs  mod.rs
src/algorithm/sort/: heap_select.rs  mod.rs  quick_sort.rs
src/classification/: decision_tree.rs  knn.rs  logistic_regression.rs  mod.rs  random_forest.rs
src/cluster/: agglomerative.rs  dbscan.rs  hierarchical.rs  kmeans.rs  mod.rs  optics.rs
src/common/: mod.rs
src/dataset/: boston.rs  boston.xy  breast_cancer.rs  breast_cancer.xy  diabetes.rs  diabetes.xy  digits.rs  digits.xy  generator.rs  iris.rs  iris.xy  mod.rs
src/decomposition/: mod.rs  pca.rs  svd.rs
src/ensemble/: mod.rs  random_forest.rs  random_forest_classifier.rs  random_forest_regressor.rs
src/error/: mod.rs
src/linalg/: base.rs  cholesky.rs  cholesky_n.rs  evd.rs  evd_n.rs  high_order.rs  lu.rs  lu_n.rs  mod.rs  nalgebra_bindings.rs  ndarray_bindings.rs  qr.rs  qr_n.rs  stats.rs  svd.rs  svd_n.rs
src/linalg/basic/: arrays.rs  matrix.rs  mod.rs  vector.rs
src/linalg/dense/: matrix.rs  mod.rs  vector.rs
src/linalg/naive/: dense_matrix.rs  dense_vector.rs  mod.rs
src/linalg/nalgebra/: matrix.rs  mod.rs  vector.rs
src/linalg/ndarray/: matrix.rs  mod.rs  vector.rs
src/linalg/traits/: cholesky.rs  evd.rs  high_order.rs  lu.rs  mod.rs  qr.rs  stats.rs  svd.rs
src/linear/: bg_solver.rs  elastic_net.rs  elasticnet.rs  lasso.rs  lasso_optimizer.rs  linear_regression.rs  logistic_regression.rs  mod.rs  ridge_regression.rs
src/math/: mod.rs  num.rs  vector.rs
src/math/distance/: euclidian.rs  hamming.rs  mahalanobis.rs  manhattan.rs  minkowski.rs  mod.rs
src/metrics/: accuracy.rs  auc.rs  cluster_hcv.rs  cluster_helpers.rs  f1.rs  mean_absolute_error.rs  mean_squared_error.rs  mod.rs  precision.rs  r2.rs  recall.rs
src/metrics/distance/: euclidian.rs  hamming.rs  mahalanobis.rs  manhattan.rs  minkowski.rs  mod.rs
src/model_selection/: hyper_tuning.rs  kfold.rs  mod.rs
src/model_selection/hyper_tuning/: grid_search.rs  mod.rs
src/naive_bayes/: bernoulli.rs  categorical.rs  gaussian.rs  mod.rs  multinomial.rs
src/neighbors/: knn.rs  knn_classifier.rs  knn_regressor.rs  mod.rs
src/numbers/: basenum.rs  floatnum.rs  mod.rs  realnum.rs
src/optimization/: first_order.rs  line_search.rs  mod.rs
src/optimization/first_order/: gradient_descent.rs  lbfgs.rs  mod.rs
src/preprocessing/: categorical.rs  categorical_encoder.rs  categorical_encoders.rs  data_traits.rs  mod.rs  numerical.rs  series_encoder.rs  target_encoders.rs  traits.rs
src/readers/: csv.rs  error.rs  io_testing.rs  mod.rs
src/regression/: linear_regression.rs  mod.rs
src/svm/: mod.rs  svc.rs  svc_gridsearch.rs  svr.rs
src/svm/search/: mod.rs  svc_params.rs  svr_params.rs
src/tree/: decision_tree_classifier.rs  decision_tree_regressor.rs  mod.rs
