[package]
name = "smartcore"
description = "The most advanced machine learning library in rust."
homepage = "https://smartcorelib.org"
version = "0.5.0"
authors = ["SmartCore Developers"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/smartcore"
repository = "https://github.com/smartcorelib/smartcore"
readme = "README.md"
keywords = ["machine-learning", "statistical", "ai", "optimization", "linear-algebra"]
categories = ["science"]

[features]
default = ["datasets", "serde"]
ndarray-bindings = ["ndarray"]
datasets = ["rand_distr", "std"]
fp_bench = ["itertools"]
std = ["rand/std", "rand/std_rng"]
# wasm32 only
js = ["getrandom/js"]

[dependencies]
approx = "0.5.1"
cfg-if = "1.0.0"
itertools = { version = "0.10.3", optional = true }
ndarray = { version = "0.15", optional = true }
num-traits = "0.2.12"
num = "0.4"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
rand_distr = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
smartcore = { path = ".", features = ["fp_bench"] }
criterion = { version = "0.4", default-features = false }
serde_json = "1.0"
bincode = "1.3.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "naive_bayes"
harness = false
required-features = ["ndarray-bindings"]

[[bench]]
name = "fastpair"
harness = false
required-features = ["fp_bench"]
