[package]
name = "smartcore"
description = "The most advanced machine learning library in rust."
homepage = "https://smartcorelib.org"
version = "0.4.0"
authors = ["SmartCore Developers"]
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/smartcore"
repository = "https://github.com/smartcorelib/smartcore"
readme = "README.md"
keywords = ["machine-learning", "statistical", "ai", "optimization", "linear-algebra"]
categories = ["science"]

[dependencies]
approx = "0.5.1"
cfg-if = "1.0.0"
ndarray = { version = "0.15", optional = true }
num-traits = "0.2.12"
num = "0.4"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rand_distr = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["serde", "datasets"]
serde = ["dep:serde"]
ndarray-bindings = ["dep:ndarray"]
datasets = ["dep:rand_distr", "std"]
std = ["rand/std_rng", "rand/std"]
# wasm32 only
js = ["getrandom/js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
serde_json = "1.0"
bincode = "1.3.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.bench]
debug = true

resolver = "2"

[profile.test]
debug = 1
opt-level = 3
split-debuginfo = "unpacked"

[profile.release]
strip = true 
debug = 1
lto = true
codegen-units = 1
overflow-checks = true